Fix for spacing on .block-code

--- a/assets/css/samuelturnerui/base/_code.scss
+++ b/assets/css/samuelturnerui/base/_code.scss
@@ -8,3 +8,7 @@ pre code,
 	padding: $half-spacing-unit;
 	background-color: $background-color-1;
 }
+
+.block-code {
+	margin-bottom: $base-spacing-unit;
+}
